# r-index-f

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/block_compression/: CMakeLists.txt  block_table.hpp  interval_block.hpp  interval_pos.hpp
include/common/: CMakeLists.txt  common.hpp
include/r_index_f/: CMakeLists.txt  LF_table.hpp  alt_block.hpp  alt_table.hpp  block_table.hpp  columnar_table.hpp  dac.hpp  hybrid_table.hpp  r_index_f.hpp
include/r_index_f/block_compression/: CMakeLists.txt  block_table.hpp  interval_block.hpp  interval_pos.hpp
include/r_index_f/ds/: ACGT_map.hpp  CMakeLists.txt  base_abs.hpp  base_bv.hpp  base_interpolate.hpp  base_sample.hpp  heads_bv_w.hpp  heads_wt_w.hpp  idx_bit_vector.hpp  idx_list.hpp  interval_block.hpp  interval_pos.hpp  intervals_rank_w.hpp  scan_list.hpp  symbol_map.hpp
pipeline/: rif
test/src/: CMakeLists.txt  build_rif.cpp  count_query.cpp  crazy_train.cpp  rif_tests.cpp
